# CIS520-Project-4

./: .gitignore  CIS 520 Project 4 Outline.docx  README.txt
mpi-implementation/: CMakeLists.txt  Makefile  perf_matrix.sh  run_mpi.slurm
mpi-implementation/include/: mpi_line_max.h
mpi-implementation/src/: mpi_line_max.c
openmp-implementation/: CMakeLists.txt  Makefile2  omp_run.slurm
openmp-implementation/include/: openmp_imp.h
openmp-implementation/src/: openmp_imp.c
openmp_implementation/: Makefile.cmake
pthread-implementation/: CMakeLists.txt
pthread-implementation/include/: thread_pool.h
pthread-implementation/src/: main.c  thread_pool.c
pthread-implementation/testing/: aggregate_results.sh  benchmark.slurm  run_tests.sh
